--- a/styles/nav.css
+++ b/styles/nav.css
@@ -86,9 +86,11 @@ ul {
   }
   
   h1 {
+    text-align: center;
     display: inline-block;
     font-family: 'Courier New', Courier, monospace;
     line-height: 7;
+
   }
 
   .homepic {
@@ -103,7 +105,7 @@ ul {
   border: 5px solid black;
   font-family:'Courier New', Courier, monospace;
   text-align: center;
-  height: 390px;
+  height: 500px;
   width: 700px;
   padding: 50px;
   position: relative;
@@ -121,4 +123,23 @@ ul {
   text-decoration: none;
 }
 
-  
+* {
+  box-sizing: border-box;
+}
+.column {
+  float: left;
+  width: 50%;
+  padding: 5px;
+}
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.p1 {
+  font-family:'Courier New', Courier, monospace;
+  position: relative;
+  float:left;
+  padding-left: 60px;
+}
