--- a/styles/nav.css
+++ b/styles/nav.css
@@ -86,18 +86,16 @@ ul {
   }
   
   h1 {
-    text-align: center;
-    display: inline-block;
+    text-align: left;
     font-family: 'Courier New', Courier, monospace;
     line-height: 7;
-
   }
 
   .homepic {
     position: relative;
     bottom: 80px;
     float: right;
-    margin-right: 60px;
+    margin-right: 100px;
     margin-bottom: 100px;
 }
 
@@ -110,7 +108,7 @@ ul {
   padding: 50px;
   position: relative;
   bottom: 80px;
-  margin-left: 60px;
+  margin-left: 90px;
 }
 
 .buttons {
@@ -142,4 +140,22 @@ ul {
   position: relative;
   float:left;
   padding-left: 60px;
+}
+
+table {
+  border: 1px solid black;
+  border-collapse: collapse;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+table,
+td,
+th {
+  border: 1px solid black;
+}
+
+h2{
+  font-family: 'Courier New', Courier, monospace;
 }
