--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,118 +1,120 @@
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: visible;
-    position: relative;
-    z-index: 4;
-  }
-  
-  li {
-    display: inline;
-    float: left;
-  }
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: visible;
+  position: relative;
+  z-index: 4;
+}
 
-  li a,
-  .dropbtn {
-      display: block;
-      padding: 8px 16px;
-      padding-top: 24px;
-      padding-bottom: 24px;
-      color: #282a35;
-      text-decoration: none;
-  }
+li {
+  display: inline;
+  float: left;
+}
 
-  li a:hover,
-  .dropdown:hover .dropbtn {
-      background-color: #b78460;
-  }
+li a,
+.dropbtn {
+  display: block;
+  padding: 8px 16px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  color: #282a35;
+  text-decoration: none;
+}
 
-  li .dropdown {
-      display: inline-block;
-  }
+li a:hover,
+.dropdown:hover .dropbtn {
+  background-color: #b78460;
+}
 
-  .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: #364966;
-      min-width: 160px;
-      box-shadow: 0px 8px 16px 0 px rgba(0, 0, 0, 0.2);
-      z-index: 1;
-  }
+li .dropdown {
+  display: inline-block;
+}
 
-  .dropdown-content a {
-      color: black;
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
-      text-align: left;
-  }
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #364966;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0 px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
 
-  .dropdown-content a:hover {
-      background-color: #b38cbf;
-  }
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
 
-  .dropdown:hover .dropdown-content {
-      display: block;
-  }
-  
-  li a {
-    display: block;
-    padding: 8px 16px;
-    padding-top: 24px;
-    padding-bottom: 24px;
-    color: #282a35;
-    text-align: center;
-    text-decoration: none;
-    font-size: 18px;
-    cursor: pointer;
-    font-family:'Courier New', Courier, monospace;
-    font-weight: bolder;
-  }
-  
-  .valbar a:hover {
-    background-color: #b78460;
-    color: white;
-  }
-  
-  body {
-    background-color: #fa4454;
-  }
-  
-  .logo {
-    float: left;
-    position: relative;
-    margin: 10px 15px 15px 10px;
-  }
-  
-  h1 {
-    text-align: left;
-    font-family: 'Courier New', Courier, monospace;
-    line-height: 7;
-  }
+.dropdown-content a:hover {
+  background-color: #b38cbf;
+}
 
-  .homepic {
-    position: relative;
-    bottom: 80px;
-    float: right;
-    margin-right: 100px;
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+li a {
+  display: block;
+  padding: 8px 16px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  color: #282a35;
+  text-align: center;
+  text-decoration: none;
+  font-size: 18px;
+  cursor: pointer;
+  font-family: "Courier New", Courier, monospace;
+  font-weight: bolder;
+}
+
+.valbar a:hover {
+  background-color: #b78460;
+  color: white;
+}
+
+body {
+  background-color: #fa4454;
+}
+
+.logo {
+  float: left;
+  position: relative;
+  margin: 10px 15px 15px 10px;
+}
+
+h1 {
+  text-align: center;
+  font-family: "Courier New", Courier, monospace;
+  padding-top: 100px;
+}
+
+.homepic {
+  position: relative;
+  top: 30px;
+  bottom: 80px;
+  float: right;
+  margin-right: 100px;
 }
 
 .box {
   border: 5px solid black;
-  font-family:'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   text-align: center;
-  height: 500px;
+  height: 400px;
   width: 700px;
-  padding: 50px;
+  padding: 30px;
   position: relative;
   bottom: 80px;
+  top: 30px;
   margin-left: 90px;
 }
 
 .buttons {
   position: relative;
-  top: 90px;
+  top: 30px;
   background-color: #042e27;
   color: white;
   padding: 10px 20px;
@@ -128,6 +130,10 @@ ul {
   width: 50%;
   padding: 5px;
 }
+.row {
+    padding-top: 90px;
+    padding-left: 145px;
+}
 .row::after {
   content: "";
   clear: both;
@@ -135,9 +141,9 @@ ul {
 }
 
 .p1 {
-  font-family:'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   position: relative;
-  float:left;
+  float: left;
   padding-left: 30px;
 }
 
@@ -146,7 +152,7 @@ table {
   border-collapse: collapse;
   margin-left: auto;
   margin-right: auto;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 table,
@@ -155,10 +161,10 @@ th {
   border: 1px solid black;
 }
 
-h2{
-  font-family: 'Courier New', Courier, monospace;
+h2 {
+  font-family: "Courier New", Courier, monospace;
 }
 
-p{
-  font-family: 'Courier New', Courier, monospace;
+p {
+  font-family: "Courier New", Courier, monospace;
 }
