--- a/styles/agent.css
+++ b/styles/agent.css
@@ -95,3 +95,18 @@ ul {
   p{
     font-family: 'Courier New', Courier, monospace;
   }
+
+  table {
+    border: 1px solid black;
+    border-collapse: collapse;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: "Courier New", Courier, monospace;
+  }
+  
+  table,
+  td,
+  th {
+    border: 1px solid black;
+  }
+  
