--- a/styles/maps.css
+++ b/styles/maps.css
@@ -76,7 +76,7 @@ ul {
   }
   
   body {
-    background-color: #fa4454;
+    background-color: #206b42;
   }
   
   .logo {
@@ -109,4 +109,6 @@ ul {
   th {
     border: 1px solid black;
   }
+
+
   
