--- a/styles/nav.css
+++ b/styles/nav.css
@@ -76,7 +76,10 @@ li a {
 }
 
 body {
-  background-color: #fa4454;
+  background-color: #fa4454; 
+  @media screen and (max-width:1200px) and (min-width:1024px) {
+    background-color: #fa4454; 
+  }
 }
 
 .logo {
